changes to classic ml pipeline

--- a/src/preprocessing/datasets/process_breast_fibro_IMC.ipynb
+++ b/src/preprocessing/datasets/process_breast_fibro_IMC.ipynb
@@ -387,12 +387,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encode uninfomrative variables with different dtypes"
+    "# Encode uninfomrative variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,90 +423,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FSP1                     float64\n",
-      "aSMA                     float64\n",
-      "Histone H3               float64\n",
-      "CD11b_1                  float64\n",
-      "HLA-DR                   float64\n",
-      "CD146                    float64\n",
-      "Cadherin-11              float64\n",
-      "FAP                      float64\n",
-      "CD11b                    float64\n",
-      "VCAM1                    float64\n",
-      "CD20                     float64\n",
-      "CD68                     float64\n",
-      "IDO                      float64\n",
-      "CD3                      float64\n",
-      "Podoplanin               float64\n",
-      "CD11c                    float64\n",
-      "Carbonic Anhydrase IX    float64\n",
-      "CD73                     float64\n",
-      "MMP9                     float64\n",
-      "p75 (CD271)              float64\n",
-      "CD10                     float64\n",
-      "Vimentin                 float64\n",
-      "FOXP3                    float64\n",
-      "CXCL13                   float64\n",
-      "PNAd                     float64\n",
-      "CD8                      float64\n",
-      "Fibronectin              float64\n",
-      "LYVE-1                   float64\n",
-      "PDGFR-b                  float64\n",
-      "CD34                     float64\n",
-      "CD4                      float64\n",
-      "vWF                      float64\n",
-      "CXCL-12                  float64\n",
-      "CCL21                    float64\n",
-      "Keratin Epithelial       float64\n",
-      "Iridium191               float64\n",
-      "Iridium193               float64\n",
-      "Ki-67                    float64\n",
-      "CD45                     float64\n",
-      "Myeloperoxidase MPO      float64\n",
-      "ImageNumber               object\n",
-      "CellNumber                object\n",
-      "x                         object\n",
-      "y                         object\n",
-      "Area                       int64\n",
-      "MajorAxisLength          float64\n",
-      "MinorAxisLength          float64\n",
-      "Area_Description          object\n",
-      "BatchID                   object\n",
-      "SampleID                  object\n",
-      "RoiID                     object\n",
-      "CellID                    object\n",
-      "celltype                  object\n",
-      "cell_subtype              object\n",
-      "level_1_cell_type         object\n",
-      "level_2_cell_type         object\n",
-      "cell_type                 object\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ImageNumber</th>\n",
+       "      <th>CellNumber</th>\n",
+       "      <th>BatchID</th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>RoiID</th>\n",
+       "      <th>CellID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>56</td>\n",
+       "      <td>20201013</td>\n",
+       "      <td>TBB075</td>\n",
+       "      <td>TBB075_1</td>\n",
+       "      <td>TBB075_1_56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>96</td>\n",
+       "      <td>20201013</td>\n",
+       "      <td>TBB075</td>\n",
+       "      <td>TBB075_1</td>\n",
+       "      <td>TBB075_1_96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>20201013</td>\n",
+       "      <td>TBB075</td>\n",
+       "      <td>TBB075_1</td>\n",
+       "      <td>TBB075_1_101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>114</td>\n",
+       "      <td>20201013</td>\n",
+       "      <td>TBB075</td>\n",
+       "      <td>TBB075_1</td>\n",
+       "      <td>TBB075_1_114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>138</td>\n",
+       "      <td>20201013</td>\n",
+       "      <td>TBB075</td>\n",
+       "      <td>TBB075_1</td>\n",
+       "      <td>TBB075_1_138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>553116</th>\n",
+       "      <td>108</td>\n",
+       "      <td>5061</td>\n",
+       "      <td>20201023</td>\n",
+       "      <td>TBB226</td>\n",
+       "      <td>TBB226_8</td>\n",
+       "      <td>TBB226_8_5061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>553117</th>\n",
+       "      <td>108</td>\n",
+       "      <td>5763</td>\n",
+       "      <td>20201023</td>\n",
+       "      <td>TBB226</td>\n",
+       "      <td>TBB226_8</td>\n",
+       "      <td>TBB226_8_5763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>553118</th>\n",
+       "      <td>109</td>\n",
+       "      <td>318</td>\n",
+       "      <td>20201023</td>\n",
+       "      <td>TBB226</td>\n",
+       "      <td>TBB226_9</td>\n",
+       "      <td>TBB226_9_318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>553119</th>\n",
+       "      <td>109</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>20201023</td>\n",
+       "      <td>TBB226</td>\n",
+       "      <td>TBB226_9</td>\n",
+       "      <td>TBB226_9_1123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>553120</th>\n",
+       "      <td>109</td>\n",
+       "      <td>4033</td>\n",
+       "      <td>20201023</td>\n",
+       "      <td>TBB226</td>\n",
+       "      <td>TBB226_9</td>\n",
+       "      <td>TBB226_9_4033</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>553121 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ImageNumber  CellNumber   BatchID SampleID     RoiID         CellID\n",
+       "0                 1          56  20201013   TBB075  TBB075_1    TBB075_1_56\n",
+       "1                 1          96  20201013   TBB075  TBB075_1    TBB075_1_96\n",
+       "2                 1         101  20201013   TBB075  TBB075_1   TBB075_1_101\n",
+       "3                 1         114  20201013   TBB075  TBB075_1   TBB075_1_114\n",
+       "4                 1         138  20201013   TBB075  TBB075_1   TBB075_1_138\n",
+       "...             ...         ...       ...      ...       ...            ...\n",
+       "553116          108        5061  20201023   TBB226  TBB226_8  TBB226_8_5061\n",
+       "553117          108        5763  20201023   TBB226  TBB226_8  TBB226_8_5763\n",
+       "553118          109         318  20201023   TBB226  TBB226_9   TBB226_9_318\n",
+       "553119          109        1123  20201023   TBB226  TBB226_9  TBB226_9_1123\n",
+       "553120          109        4033  20201023   TBB226  TBB226_9  TBB226_9_4033\n",
+       "\n",
+       "[553121 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df.dtypes)"
+    "df[['ImageNumber', 'CellNumber','BatchID', 'SampleID', 'RoiID', 'CellID']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[['ImageNumber', 'CellNumber', 'x', 'y', 'BatchID']] = df[['ImageNumber', 'CellNumber', 'x', 'y', 'BatchID']].astype('object')"
+    "df = df.rename(columns={'ImageNumber': 'sample_id', 'CellNumber': 'cell_id', 'SampleID': 'PatientID', 'CellID': 'unique_cell_id'})\n",
+    "df = df.drop(columns=['BatchID'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['FSP1', 'aSMA', 'Histone H3', 'CD11b_1', 'HLA-DR', 'CD146',\n",
+       "       'Cadherin-11', 'FAP', 'CD11b', 'VCAM1', 'CD20', 'CD68', 'IDO', 'CD3',\n",
+       "       'Podoplanin', 'CD11c', 'Carbonic Anhydrase IX', 'CD73', 'MMP9',\n",
+       "       'p75 (CD271)', 'CD10', 'Vimentin', 'FOXP3', 'CXCL13', 'PNAd', 'CD8',\n",
+       "       'Fibronectin', 'LYVE-1', 'PDGFR-b', 'CD34', 'CD4', 'vWF', 'CXCL-12',\n",
+       "       'CCL21', 'Keratin Epithelial', 'Iridium191', 'Iridium193', 'Ki-67',\n",
+       "       'CD45', 'Myeloperoxidase MPO', 'sample_id', 'cell_id', 'x', 'y', 'Area',\n",
+       "       'MajorAxisLength', 'MinorAxisLength', 'Area_Description', 'PatientID',\n",
+       "       'RoiID', 'unique_cell_id', 'celltype', 'cell_subtype',\n",
+       "       'level_1_cell_type', 'level_2_cell_type', 'cell_type'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
