--- a/src/preprocessing/datasets/process_cHL1.ipynb
+++ b/src/preprocessing/datasets/process_cHL1.ipynb
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encode uninfomrative variables with different dtypes"
+    "# Encode uninfomrative variables "
    ]
   },
   {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -628,15 +628,15 @@
        "cellSize               int64\n",
        "x                      int64\n",
        "y                      int64\n",
-       "identifier             int64\n",
-       "cellLabel              int64\n",
+       "sample_id              int64\n",
+       "cell_id                int64\n",
        "level_1_cell_type     object\n",
        "level_2_cell_type     object\n",
        "cell_type             object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,14 +649,35 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 15, 19, 14,  3, 10, 18, 22, 11,  5, 20, 29, 23, 30,  9, 28,  8,\n",
+       "       27,  7, 32, 26, 17,  4,  1, 24, 21, 25, 13, 16,  2, 12,  6])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[['cellLabel','x', 'y', 'identifier']] = df[['cellLabel','x', 'y', 'identifier']].astype('object')"
+    "df['identifier'].unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={'cellLabel': 'cell_id', 'identifier': 'sample_id'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
