--- a/src/preprocessing/datasets/process_cHL2.ipynb
+++ b/src/preprocessing/datasets/process_cHL2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,12 +348,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encode uninfomrative variables with different dtypes"
+    "# Encode uninfomrative variables "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={'cellLabel': 'cell_id', 'csv': 'sample_id'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -434,33 +443,24 @@
        "CD86                 float64\n",
        "CD25                 float64\n",
        "Na-K ATPase          float64\n",
-       "cellLabel              int64\n",
+       "cell_id                int64\n",
        "cellSize               int64\n",
        "x                      int64\n",
        "y                      int64\n",
-       "csv                   object\n",
+       "sample_id             object\n",
        "level_1_cell_type     object\n",
        "level_2_cell_type     object\n",
        "cell_type             object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[['cellLabel','x', 'y']] = df[['cellLabel','x', 'y']].astype('object')"
    ]
   },
   {
