--- a/src/preprocessing/datasets/process_cHL_CODEX.ipynb
+++ b/src/preprocessing/datasets/process_cHL_CODEX.ipynb
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encode uninfomrative variables with different dtypes"
+    "# Encode uninfomrative variables "
    ]
   },
   {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "Vimentin             float64\n",
        "a.SMA                float64\n",
        "b.Catenin            float64\n",
-       "cellLabel              int64\n",
+       "cell_id                int64\n",
        "cellSize               int64\n",
        "x                      int64\n",
        "y                      int64\n",
@@ -446,7 +446,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,14 +459,45 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              1\n",
+       "1              2\n",
+       "2              3\n",
+       "3              4\n",
+       "4              5\n",
+       "           ...  \n",
+       "145156    152811\n",
+       "145157    152812\n",
+       "145158    152813\n",
+       "145159    152814\n",
+       "145160    152815\n",
+       "Name: cellLabel, Length: 145161, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[['cellLabel','x', 'y']] = df[['cellLabel','x', 'y']].astype('object')"
+    "df['cellLabel']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={'cellLabel': 'cell_id'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
