--- a/src/preprocessing/datasets/process_feto_maternal.ipynb
+++ b/src/preprocessing/datasets/process_feto_maternal.ipynb
@@ -372,12 +372,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encode uninfomrative variables with different dtypes"
+    "# Encode uninfomrative variables "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -390,12 +390,12 @@
        "       'Tryptase', 'VIM', 'background', 'iNOS', 'area', 'cell_size',\n",
        "       'eccentricity', 'major_axis_length', 'minor_axis_length', 'perimeter',\n",
        "       'Point', 'x', 'y', 'area_nuclear', 'nucleated', 'overlap_decidua_only',\n",
-       "       'point_mean_delta', 'distance_from_artery', 'cell_ID_in_Point',\n",
-       "       'level_1_cell_type', 'level_2_cell_type', 'cell_type'],\n",
+       "       'cell_ID_in_Point', 'level_1_cell_type', 'level_2_cell_type',\n",
+       "       'cell_type'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -457,22 +457,20 @@
        "major_axis_length       float64\n",
        "minor_axis_length       float64\n",
        "perimeter               float64\n",
-       "Point                    object\n",
+       "sample_id                object\n",
        "x                         int64\n",
        "y                         int64\n",
        "area_nuclear              int64\n",
        "nucleated                 int64\n",
        "overlap_decidua_only      int64\n",
-       "point_mean_delta        float64\n",
-       "distance_from_artery    float64\n",
-       "cell_ID_in_Point          int64\n",
+       "cell_id                   int64\n",
        "level_1_cell_type        object\n",
        "level_2_cell_type        object\n",
        "cell_type                object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,16 +481,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[['cell_ID_in_Point','x', 'y']] = df[['cell_ID_in_Point','x', 'y']].astype('object')"
+    "df = df.rename(columns={'cell_ID_in_Point': 'cell_id', 'Point': 'sample_id'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -542,20 +540,20 @@
        "major_axis_length       0\n",
        "minor_axis_length       0\n",
        "perimeter               0\n",
-       "Point                   0\n",
+       "sample_id               0\n",
        "x                       0\n",
        "y                       0\n",
        "area_nuclear            0\n",
        "nucleated               0\n",
        "overlap_decidua_only    0\n",
-       "cell_ID_in_Point        0\n",
+       "cell_id                 0\n",
        "level_1_cell_type       0\n",
        "level_2_cell_type       0\n",
        "cell_type               0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,16 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop(columns=['point_mean_delta', 'distance_from_artery'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
