--- a/src/preprocessing/datasets/process_myeloma_IMC.ipynb
+++ b/src/preprocessing/datasets/process_myeloma_IMC.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running SCIMAP  2.2.11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -831,12 +823,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encode uninfomrative variables with different dtypes"
+    "# Encode uninfomrative variables "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -895,27 +887,160 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/myeloma_IMC_quantification.csv')\n",
     "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CD38                          float64\n",
+       "Perilipin                     float64\n",
+       "Vimentin                      float64\n",
+       "B4GALT1                       float64\n",
+       "MPO                           float64\n",
+       "CathepsinK                    float64\n",
+       "ATP5A                         float64\n",
+       "RUNX2                         float64\n",
+       "HIF1A                         float64\n",
+       "CD11b                         float64\n",
+       "CD45                          float64\n",
+       "CS                            float64\n",
+       "CD11c                         float64\n",
+       "CD36                          float64\n",
+       "CD4                           float64\n",
+       "CD34                          float64\n",
+       "CD68                          float64\n",
+       "IL32                          float64\n",
+       "IDO                           float64\n",
+       "CD8                           float64\n",
+       "GranzymeK                     float64\n",
+       "PKM2                          float64\n",
+       "IRF4                          float64\n",
+       "GLUT1                         float64\n",
+       "GranzymeB                     float64\n",
+       "Ki67                          float64\n",
+       "CollagenTypeI                 float64\n",
+       "CD3                           float64\n",
+       "CPT1A                         float64\n",
+       "CD98                          float64\n",
+       "HLA-DR                        float64\n",
+       "ST6GAL1                       float64\n",
+       "CD138                         float64\n",
+       "cell_id                         int64\n",
+       "area                            int64\n",
+       "y                             float64\n",
+       "x                             float64\n",
+       "axis_major_length             float64\n",
+       "axis_minor_length             float64\n",
+       "eccentricity                  float64\n",
+       "sample_id                      object\n",
+       "disease                        object\n",
+       "patient_ID                     object\n",
+       "ROI                             int64\n",
+       "disease2                       object\n",
+       "distance_to_bone_corrected    float64\n",
+       "cellcharter_CN                 object\n",
+       "level_1_cell_type              object\n",
+       "level_2_cell_type              object\n",
+       "cell_type                      object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df[['CellID','x', 'y', 'ROI']] = df[['CellID','x', 'y', 'ROI']].astype('object')"
+    "df = df.rename(columns={'CellID': 'cell_id', 'image_ID': 'sample_id'})\n",
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CD38                          0\n",
+       "Perilipin                     0\n",
+       "Vimentin                      0\n",
+       "B4GALT1                       0\n",
+       "MPO                           0\n",
+       "CathepsinK                    0\n",
+       "ATP5A                         0\n",
+       "RUNX2                         0\n",
+       "HIF1A                         0\n",
+       "CD11b                         0\n",
+       "CD45                          0\n",
+       "CS                            0\n",
+       "CD11c                         0\n",
+       "CD36                          0\n",
+       "CD4                           0\n",
+       "CD34                          0\n",
+       "CD68                          0\n",
+       "IL32                          0\n",
+       "IDO                           0\n",
+       "CD8                           0\n",
+       "GranzymeK                     0\n",
+       "PKM2                          0\n",
+       "IRF4                          0\n",
+       "GLUT1                         0\n",
+       "GranzymeB                     0\n",
+       "Ki67                          0\n",
+       "CollagenTypeI                 0\n",
+       "CD3                           0\n",
+       "CPT1A                         0\n",
+       "CD98                          0\n",
+       "HLA-DR                        0\n",
+       "ST6GAL1                       0\n",
+       "CD138                         0\n",
+       "cell_id                       0\n",
+       "area                          0\n",
+       "y                             0\n",
+       "x                             0\n",
+       "axis_major_length             0\n",
+       "axis_minor_length             0\n",
+       "eccentricity                  0\n",
+       "sample_id                     0\n",
+       "disease                       0\n",
+       "patient_ID                    0\n",
+       "disease2                      0\n",
+       "distance_to_bone_corrected    0\n",
+       "cellcharter_CN                0\n",
+       "level_1_cell_type             0\n",
+       "level_2_cell_type             0\n",
+       "cell_type                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(columns=['ROI'], inplace=True)\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
