--- a/src/preprocessing/datasets/process_IMMUcan.ipynb
+++ b/src/preprocessing/datasets/process_IMMUcan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -555,14 +555,14 @@
        "       'CD11c', 'PD1', 'PDGFRb', 'CD7', 'GrzB', 'PDL1', 'TCF7', 'CD45RO',\n",
        "       'FOXP3', 'ICOS', 'CD8a', 'CarbonicAnhydrase', 'CD33', 'Ki67', 'VISTA',\n",
        "       'CD40', 'CD4', 'CD14', 'Ecad', 'CD303', 'CD206', 'cleavedPARP', 'DNA1',\n",
-       "       'DNA2', 'image', 'sample_id', 'ObjectNumber', 'x', 'y', 'area',\n",
+       "       'DNA2', 'image', 'sample_id', 'cell_id', 'x', 'y', 'area',\n",
        "       'major_axis_length', 'minor_axis_length', 'eccentricity', 'width_px',\n",
        "       'height_px', 'cell_labels', 'level_1_cell_type', 'level_2_cell_type',\n",
        "       'cell_type'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,77 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MPO                  float64\n",
-       "HistoneH3            float64\n",
-       "SMA                  float64\n",
-       "CD16                 float64\n",
-       "CD38                 float64\n",
-       "HLADR                float64\n",
-       "CD27                 float64\n",
-       "CD15                 float64\n",
-       "CD45RA               float64\n",
-       "CD163                float64\n",
-       "B2M                  float64\n",
-       "CD20                 float64\n",
-       "CD68                 float64\n",
-       "Ido1                 float64\n",
-       "CD3                  float64\n",
-       "LAG3                 float64\n",
-       "CD11c                float64\n",
-       "PD1                  float64\n",
-       "PDGFRb               float64\n",
-       "CD7                  float64\n",
-       "GrzB                 float64\n",
-       "PDL1                 float64\n",
-       "TCF7                 float64\n",
-       "CD45RO               float64\n",
-       "FOXP3                float64\n",
-       "ICOS                 float64\n",
-       "CD8a                 float64\n",
-       "CarbonicAnhydrase    float64\n",
-       "CD33                 float64\n",
-       "Ki67                 float64\n",
-       "VISTA                float64\n",
-       "CD40                 float64\n",
-       "CD4                  float64\n",
-       "CD14                 float64\n",
-       "Ecad                 float64\n",
-       "CD303                float64\n",
-       "CD206                float64\n",
-       "cleavedPARP          float64\n",
-       "DNA1                 float64\n",
-       "DNA2                 float64\n",
-       "image                 object\n",
-       "sample_id             object\n",
-       "cell_id                int64\n",
-       "x                    float64\n",
-       "y                    float64\n",
-       "area                   int64\n",
-       "major_axis_length    float64\n",
-       "minor_axis_length    float64\n",
-       "eccentricity         float64\n",
-       "width_px               int64\n",
-       "height_px              int64\n",
-       "cell_labels           object\n",
-       "level_1_cell_type     object\n",
-       "level_2_cell_type     object\n",
-       "cell_type             object\n",
-       "dtype: object"
+       "15"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dtypes"
+    "df['cell_type'].nunique()"
    ]
   },
   {
