--- a/src/preprocessing/datasets/process_cHL1.ipynb
+++ b/src/preprocessing/datasets/process_cHL1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -561,12 +561,12 @@
        "       'CD68', 'B2-Microglobulin', 'CD8', 'CD3', 'HLA1', 'CD15', 'Tbet',\n",
        "       'CD14', 'CXCR5', 'CD45RA', 'HLA-DR', 'CD57', 'IL-10', 'CD30', 'TIM3',\n",
        "       'RORgT', 'TCRgd', 'CD86', 'CD25', 'Na-K ATPase', 'cellSize', 'x', 'y',\n",
-       "       'identifier', 'cellLabel', 'level_1_cell_type', 'level_2_cell_type',\n",
+       "       'sample_id', 'cell_id', 'level_1_cell_type', 'level_2_cell_type',\n",
        "       'cell_type'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,6 +574,27 @@
    "source": [
     "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_1_MIBI_quantification.csv')\n",
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 15, 19, 14,  3, 10, 18, 22, 11,  5, 20, 29, 23, 30,  9, 28,  8,\n",
+       "       27,  7, 32, 26, 17,  4,  1, 24, 21, 25, 13, 16,  2, 12,  6])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sample_id'].unique()"
    ]
   },
   {
