--- a/src/preprocessing/datasets/process_cHL_CODEX.ipynb
+++ b/src/preprocessing/datasets/process_cHL_CODEX.ipynb
@@ -364,7 +364,7 @@
        "       'Collagen.4', 'Cytokeratin', 'DAPI.01', 'EGFR', 'FoxP3', 'Granzyme.B',\n",
        "       'HLA.DR', 'IDO.1', 'LAG.3', 'MCT', 'MMP.9', 'MUC.1', 'PD.1', 'PD.L1',\n",
        "       'Podoplanin', 'T.bet', 'TCR.g.d', 'TCRb', 'Tim.3', 'VISA', 'Vimentin',\n",
-       "       'a.SMA', 'b.Catenin', 'cellLabel', 'cellSize', 'x', 'y',\n",
+       "       'a.SMA', 'b.Catenin', 'cell_id', 'cellSize', 'x', 'y',\n",
        "       'level_1_cell_type', 'level_2_cell_type', 'cell_type'],\n",
        "      dtype='object')"
       ]
@@ -377,6 +377,45 @@
    "source": [
     "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv')\n",
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "CD4+_T_cell              37480\n",
+       "CD8+_T_cell              17184\n",
+       "B_cell                   16196\n",
+       "Dendritic_cell            9637\n",
+       "Endothelial               8705\n",
+       "Cancer                    8260\n",
+       "NK_cell                   7339\n",
+       "M2_Macrophage             7286\n",
+       "Monocyte                  6913\n",
+       "unedfined                 5108\n",
+       "Lymphatic                 3768\n",
+       "Neutrophil                3442\n",
+       "Treg                      3352\n",
+       "Mast_cell                 3324\n",
+       "M1_Macrophage             3101\n",
+       "Epithelial                2251\n",
+       "Seg Artifact              1431\n",
+       "Cytotoxic_CD8+_T_cell      384\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['cell_type'].value_counts()"
    ]
   },
   {
