--- a/src/preprocessing/datasets/process_feto_maternal.ipynb
+++ b/src/preprocessing/datasets/process_feto_maternal.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -389,13 +389,13 @@
        "       'IDO-1', 'Ki67_raw', 'Lck', 'PD-1', 'PD-L1', 'SMA', 'TIGIT', 'TIM-3',\n",
        "       'Tryptase', 'VIM', 'background', 'iNOS', 'area', 'cell_size',\n",
        "       'eccentricity', 'major_axis_length', 'minor_axis_length', 'perimeter',\n",
-       "       'Point', 'x', 'y', 'area_nuclear', 'nucleated', 'overlap_decidua_only',\n",
-       "       'cell_ID_in_Point', 'level_1_cell_type', 'level_2_cell_type',\n",
-       "       'cell_type'],\n",
+       "       'sample_id', 'x', 'y', 'area_nuclear', 'nucleated',\n",
+       "       'overlap_decidua_only', 'cell_id', 'level_1_cell_type',\n",
+       "       'level_2_cell_type', 'cell_type'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
