adjusted ml pipeline to celltype granularity

--- a/src/models_classes/inspect_kfolds.ipynb
+++ b/src/models_classes/inspect_kfolds.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -121,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['5.csv'], dtype=object)"
+       "array(['1.csv', '2.csv', '6.csv'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "array(['5.csv', '4.csv', '3.csv'], dtype=object)"
       ]
      },
      "execution_count": 7,
@@ -156,12 +157,12 @@
     }
    ],
    "source": [
-    "train['sample_id'].nunique()"
+    "train['sample_id'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +230,13 @@
    "source": [
     "test['encoded_phenotype'].value_counts().sort_index().plot(kind='bar')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
